--- a/DeedsBeeActivityChallenge/app/src/main/res/layout/fragment_fragment2.xml
+++ b/DeedsBeeActivityChallenge/app/src/main/res/layout/fragment_fragment2.xml
@@ -1,120 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.Fragment2"
-    android:background="@color/background">
+    android:background="@color/background"
+    android:orientation="vertical"
+    tools:context=".ui.main.Fragment2">
 
-    <TextView
-        android:id="@+id/distanceWalkedTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="@string/distanceWalkedTv"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/todayScoreTextView" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="375dp">
 
-    <TextView
-        android:id="@+id/scoreSpentResultTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="@string/scoreSpentResultTv"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.288"
-        app:layout_constraintStart_toEndOf="@+id/scoreSpentTextView"
-        app:layout_constraintTop_toBottomOf="@+id/distanceWalkedResultTextView" />
+        <LinearLayout
+            android:layout_width="263dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="130dp"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/todayScoreTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="240dp"
-        android:text="@string/todayScoreTv"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/currentScoreTextView"
+                android:layout_width="151dp"
+                android:layout_height="50dp"
+                android:text="@string/currentScoreTv"
+                android:textColor="#FFFFFF"
+                android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/currentScoreTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/currentScoreTv"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scoreSpentTextView"
-        app:layout_constraintVertical_bias="0.008" />
+            <TextView
+                android:id="@+id/scoreSpentTextView"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="4dp"
+                android:text="@string/scoreSpentTv"
+                android:textColor="#FFFFFF"
+                android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/scoreSpentTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="@string/scoreSpentTv"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/distanceWalkedTextView" />
+            <TextView
+                android:id="@+id/distanceWalkedTextView"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="4dp"
+                android:text="@string/distanceWalkedTv"
+                android:textColor="#FFFFFF"
+                android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/currentScoreResultTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/currentScoreResultTv"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toEndOf="@+id/currentScoreTextView"
-        app:layout_constraintTop_toBottomOf="@+id/scoreSpentResultTextView"
-        app:layout_constraintVertical_bias="0.008" />
+            <TextView
+                android:id="@+id/todayScoreTextView"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="4dp"
+                android:text="@string/todayScoreTv"
+                android:textColor="#FFFFFF"
+                android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/todayScoreResultTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="240dp"
-        android:text="@string/todayScoreResultTv"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.481"
-        app:layout_constraintStart_toEndOf="@+id/todayScoreTextView"
-        app:layout_constraintTop_toTopOf="parent" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/distanceWalkedResultTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="@string/distanceWalkedResultTv"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.28"
-        app:layout_constraintStart_toEndOf="@+id/distanceWalkedTextView"
-        app:layout_constraintTop_toBottomOf="@+id/todayScoreResultTextView" />
+        <LinearLayout
+            android:layout_width="154dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="130dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/currentScoreResultTextView"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
+                android:text="@string/currentScoreResultTv"
+                android:textColor="#FFFFFF"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.493"
+                app:layout_constraintVertical_bias="0.008" />
+
+            <TextView
+                android:id="@+id/scoreSpentResultTextView"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="4dp"
+                android:text="@string/scoreSpentResultTv"
+                android:textColor="#FFFFFF"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/distanceWalkedResultTextView"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="4dp"
+                android:text="@string/distanceWalkedResultTv"
+                android:textColor="#FFFFFF"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.28" />
+
+            <TextView
+                android:id="@+id/todayScoreResultTextView"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="4dp"
+                android:text="@string/todayScoreResultTv"
+                android:textColor="#FFFFFF"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.481"
+                app:layout_constraintStart_toEndOf="@+id/todayScoreTextView"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/resetScoreBtn"
-        android:layout_width="320dp"
+        android:layout_width="match_parent"
         android:layout_height="62dp"
         android:background="@android:color/holo_red_dark"
         android:text="@string/resetScoreBtnTv"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/currentScoreTextView" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
